--- a/candidates.html
+++ b/candidates.html
@@ -224,12 +224,12 @@
                                     </th>
                                     <th>
                                         <div class="items">
-                                            <span class="column-title px-0">Rating</span>
+                                            <span class="column-title px-0">Email</span>
                                         </div>
                                     </th>
                                     <th>
                                         <div class="items">
-                                            <span class="column-title px-0">Stages</span>
+                                            <span class="column-title px-0">Phone</span>
                                         </div>
                                     </th>
                                     <th>
@@ -265,7 +265,8 @@
                                     </td>
                                     <td>
                                         <div class="items">
-                                            <div class="review cursor-pointer" id="reviewStatus"
+                                            useremail@gmail.com
+                                            <!-- <div class="review cursor-pointer" id="reviewStatus"
                                                 data-bs-toggle="dropdown" aria-expanded="false">
                                                 <span class="text-warning iconify" data-icon="jam:star-f"></span> <span
                                                     class="count text-black">3.0</span>
@@ -340,12 +341,13 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </ul>
+                                            </ul> -->
                                         </div>
                                     </td>
                                     <td>
                                         <div class="items">
-                                            <div class="screening">
+                                            +4512458741
+                                            <!-- <div class="screening">
                                                 <div class="title">
                                                     <span>Screening </span>
                                                     <span class="iconify fs-4"
@@ -359,16 +361,17 @@
                                                     <div class="item"><span class="invisible">5</span></div>
                                                     <div class="item"><span class="invisible">6</span></div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </td>
                                     <td>
                                         <div class="items designation">
-                                            <div class="user">Senior Designer
-                                            </div>
-                                            <small class="role text-muted">
-                                                Designer Team
-                                            </small>
+                                            <div class="user">
+                                                Senior Designer
+                                                <div class="  role text-muted">
+                                                    <small>Designer Team</small>
+                                                </div>
+                                            </div> 
                                         </div>
                                     </td>
                                     <td>
@@ -431,7 +434,7 @@
                 </div>
 
                 <!-- pagination start -->
-                <div class="row mt-3">
+                <!-- <div class="row mt-3">
                     <div class="col-12 ">
                         <ul class="pagination custom float-end">
                             <li class="page-item disabled">
@@ -452,7 +455,7 @@
                         </ul>
                     </div>
 
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
