--- a/questionaair.html
+++ b/questionaair.html
@@ -48,6 +48,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="./create-question.html">
+                            <span class="iconify" data-icon="icomoon-free:users"></span>
+                            Create Question
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="./task.html">
                             <span class="iconify" data-icon="icomoon-free:users"></span>
                             Task
