--- a/create-question.html
+++ b/create-question.html
@@ -236,7 +236,7 @@
                 <!-- card start -->
                 <div class="row my-3">
                     <div class="col-lg-12 mx-auto">
-                        <table class="display" id="example2" style="width:100%">
+                        <table class="display" id="createQuestion" style="width:100%">
                             <thead class="border-0">
                                 <tr class="table-heading">
                                     <th>
@@ -261,7 +261,9 @@
                                     </th>
                                 </tr>
                             </thead>
+
                             <!-- loop start -->
+
                             <tbody>
                                 <tr>
                                     <td>
@@ -375,18 +377,13 @@
                                             </div> -->
                                         </div>
                                     </td>
-
                                     <td>
                                         <div class="items">
                                             <div class="date"> 15/03.2021
                                             </div>
                                         </div>
                                     </td>
-
-
                                 </tr>
-
-
                             </tbody>
                         </table>
                     </div>
@@ -546,7 +543,7 @@
     <script>
 
         $(document).ready(function () {
-            $('#example2').DataTable();
+            $('#createQuestion').DataTable();
 
         });
 
