--- a/candidates.html
+++ b/candidates.html
@@ -406,24 +406,19 @@
                                             </span>
                                             <!-- dropdown items -->
                                             <ul class="dropdown-menu border-0 shadow"
-                                                aria-labelledby="dropdownMenuLink">
+                                                aria-labelledby="dropdownMenuLink"> 
                                                 <li> <a class="dropdown-item" href="#">
-                                                        <span class="iconify text-muted"
-                                                            data-icon="ic:round-alternate-email"></span>
-
-                                                        <span class="text-muted ps-2">Add Option</span>
-                                                    </a>
-                                                </li>
-                                                <li> <a class="dropdown-item" href="#">
-                                                        <span class="iconify text-muted"
-                                                            data-icon="bytesize:mail"></span>
-                                                        <span class="text-muted ps-2 "> Candidate</span></a>
+                                                    <span class="iconify" data-icon="clarity:note-edit-line"></span>
+                                                        <span class="text-muted ps-2 ">
+                                                             Edit 
+                                                        </span>
+                                                        </a>
                                                 </li>
                                                 <li>
                                                     <a class="dropdown-item" href="#">
                                                         <span class="iconify text-muted" data-icon="cil:trash"></span>
-
-                                                        <span class="text-muted ps-2"> Delete</span></a>
+                                                        <span class="text-muted ps-2">Delete</span>
+                                                    </a>
                                                 </li>
 
                                             </ul>
