--- a/candidates.html
+++ b/candidates.html
@@ -407,7 +407,8 @@
                                             <!-- dropdown items -->
                                             <ul class="dropdown-menu border-0 shadow"
                                                 aria-labelledby="dropdownMenuLink"> 
-                                                <li> <a class="dropdown-item" href="#">
+                                                <li> 
+                                                    <a class="dropdown-item" href="#">
                                                     <span class="iconify" data-icon="clarity:note-edit-line"></span>
                                                         <span class="text-muted ps-2 ">
                                                              Edit 
@@ -423,12 +424,8 @@
 
                                             </ul>
                                         </div>
-
-
                                     </td>
                                 </tr>
-
-
                             </tbody>
                         </table>
                     </div>
